@@ -1,6 +1,7 @@
 #ifndef BEANCOUNT_BUILDER_H
 #define BEANCOUNT_BUILDER_H
 
+#define PY_SSIZE_T_CLEAN
 #include <Python.h>
 
 
